--- a/JustFix/JustFixIt/JustFixIt/MainPage.xaml
+++ b/JustFix/JustFixIt/JustFixIt/MainPage.xaml
@@ -2,13 +2,30 @@
     x:Class="JustFixIt.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:JustFixIt"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:JustFixIt"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    mc:Ignorable="d">
 
     <Grid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="6*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Viewbox>
+            <Button Background="Azure" Content="Bruger" />
+        </Viewbox>
+        <Viewbox Grid.Column="1">
+            <Button Background="Azure" Content="Mekaniker" />
+        </Viewbox>
+        <Viewbox Grid.Column="2">
+            <Button Background="Azure" Content="Admin" />
+        </Viewbox>
     </Grid>
 </Page>
