--- a/JustFix/JustFixIt/JustFixIt/View/Bruger.xaml
+++ b/JustFix/JustFixIt/JustFixIt/View/Bruger.xaml
@@ -2,13 +2,19 @@
     x:Class="JustFixIt.Bruger"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:JustFixIt"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:JustFixIt"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+    xmlns:viewModel="using:JustFixIt.ViewModel"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    mc:Ignorable="d">
+    <Page.DataContext>
+        <viewModel:BrugerViewModel />
+    </Page.DataContext>
     <Grid Background="Blue">
+        <Viewbox>
+            <Button Command="{Binding BrugerBack}" Content="Back" />
+        </Viewbox>
 
     </Grid>
 </Page>
