--- a/JustFix/JustFixIt/JustFixIt/View/Customer.xaml
+++ b/JustFix/JustFixIt/JustFixIt/View/Customer.xaml
@@ -11,9 +11,5 @@
     <Page.DataContext>
         <viewModel:CustomerViewModel />
     </Page.DataContext>
-    <Grid Background="Blue">
-        <Viewbox>
-            <Button Content="BACK" />
-        </Viewbox>
-    </Grid>
+    <Grid Background="Blue" />
 </Page>
