--- a/JustFix/JustFixIt/JustFixIt/MainPage.xaml
+++ b/JustFix/JustFixIt/JustFixIt/MainPage.xaml
@@ -5,9 +5,12 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:JustFixIt"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModel="using:JustFixIt.ViewModel"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     mc:Ignorable="d">
-
+    <Page.DataContext>
+        <viewModel:MainViewModel />
+    </Page.DataContext>
     <Grid x:Name="MainGrid" Background="DarkGreen">
         <Frame x:Name="TheFrame" />
     </Grid>
