--- a/JustFix/JustFixIt/JustFixIt/View/CreateAccount.xaml
+++ b/JustFix/JustFixIt/JustFixIt/View/CreateAccount.xaml
@@ -61,33 +61,33 @@
             Grid.Row="0"
             Grid.Column="2"
             HorizontalAlignment="Left">
-            <TextBox Width="200" Text="{Binding Name}" />
+            <TextBox Width="200" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
         </Viewbox>
         <Viewbox
             Grid.Row="1"
             Grid.Column="2"
             HorizontalAlignment="Left">
-            <TextBox Width="200" Text="{Binding Login}" />
+            <TextBox Width="200" Text="{Binding Login, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
         </Viewbox>
         <Viewbox
             Grid.Row="2"
             Grid.Column="2"
             HorizontalAlignment="Left">
-            <TextBox Width="200" Text="{Binding Password}" />
+            <TextBox Width="200" Text="{Binding Password, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
         </Viewbox>
         <Viewbox
             Grid.Row="3"
             Grid.Column="2"
             HorizontalAlignment="Left">
-            <TextBox Width="200" Text="{Binding Email}" />
+            <TextBox Width="200" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
         </Viewbox>
         <Viewbox
             Grid.Row="4"
             Grid.Column="2"
             HorizontalAlignment="Left">
-            <TextBox Width="200" Text="{Binding Number}" />
+            <TextBox Width="200" Text="{Binding Number, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
         </Viewbox>
-        <Viewbox Grid.Row="6" Grid.ColumnSpan="3">
+        <Viewbox Grid.Row="6" Grid.ColumnSpan="4">
             <StackPanel Padding="10" Orientation="Horizontal">
                 <Button
                     x:Name="Back"
