--- a/JustFix/JustFixIt/JustFixIt/View/LogIn.xaml
+++ b/JustFix/JustFixIt/JustFixIt/View/LogIn.xaml
@@ -22,16 +22,11 @@
             <ColumnDefinition Width="5*" />
 
         </Grid.ColumnDefinitions>
-        <Viewbox Grid.Row="0" Grid.Column="0">
-            <TextBlock
-                x:Name="UserName"
-                Width="140"
-                Margin="2"
-                HorizontalAlignment="Stretch"
-                Text="User Name"
-                TextAlignment="Center" />
-        </Viewbox>
-        <Viewbox Grid.Row="0" Grid.Column="1">
+
+        <Viewbox
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="2">
             <TextBox
                 x:Name="LogInName"
                 Width="140"
